# github-bulk-clone

./: .gitignore  README.md  pyproject.toml
src/github_bulk_clone/: __entry.py  __init__.py
